--- a/ansible/install_applications/vars/infra-pihole.yml
+++ b/ansible/install_applications/vars/infra-pihole.yml
@@ -4,7 +4,7 @@ _pihole_var_loader:
   base_image:
     repo: "docker.io"
     name: "pihole/pihole"
-    tag: "v5.8.1"
+    tag: "2021.10.1"
   namespace: "infra-pihole"
 
 pihole:
