--- a/ansible/install_applications/vars/home-frigate.yml
+++ b/ansible/install_applications/vars/home-frigate.yml
@@ -5,7 +5,7 @@ _frigate_var_loader:
   base_image:
     repo: "docker.io"
     name: "blakeblackshear/frigate"
-    tag: "0.8.4-amd64"
+    tag: "0.9.4-amd64"
 
 frigate:
   enabled: "{{ frigate_enabled | default(True) }}"
@@ -32,7 +32,7 @@ frigate:
     app.kubernetes.io/version: "{{ _frigate_var_loader.base_image.tag }}-custom"
 
   container:
-    image: "{{ docker_private_registry.url }}/{{ _frigate_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _frigate_var_loader.base_image.tag }}-custom"
+    image: "{{ docker_private_registry.url }}/{{ _frigate_var_loader.base_image.name | regex_replace('.*/', '') }}:{{ _frigate_var_loader.base_image.tag }}"
     requests_cpu: "{{ frigate_container_requests_cpu | default('100m') }}"
     requests_memory: "{{ frigate_container_requests_memory | default('256Mi') }}"
     limits_cpu: "{{ frigate_container_limits_cpu | default('250m') }}"
