--- a/ansible/install_applications/vars/home-nodered.yml
+++ b/ansible/install_applications/vars/home-nodered.yml
@@ -5,7 +5,7 @@ _nodered_var_loader:
   base_image:
     repo: "docker.io"
     name: "nodered/node-red"
-    tag: "1.3.5-12-minimal-amd64"
+    tag: "2.1.3-14-minimal"
 
 nodered:
   enabled: "{{ nodered_enabled | default(True) }}"
@@ -52,8 +52,8 @@ nodered:
     ldapauth_fork:
       version: 5.0.1
     node_red_contrib_home_assistant_websocket:
-      version: 0.33.1
+      version: 0.38.0
     node_red_contrib_time_range_switch:
-      version: 1.1.1
+      version: 1.1.2
     node_red_contrib_stoptimer:
       version: 0.0.7
