--- a/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/config/prometheus/rules/kube-prometheus/k8s.rules.yaml
+++ b/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/config/prometheus/rules/kube-prometheus/k8s.rules.yaml
@@ -33,7 +33,7 @@
     record: node_namespace_pod_container:container_memory_swap
   - expr: |
       kube_pod_container_resource_requests{resource="memory",job="kube-state-metrics"}  * on (namespace, pod, cluster)
-      group_left() max by (namespace, pod) (
+      group_left() max by (namespace, pod, cluster) (
         (kube_pod_status_phase{phase=~"Pending|Running"} == 1)
       )
     record: cluster:namespace:pod_memory:active:kube_pod_container_resource_requests
@@ -50,7 +50,7 @@
     record: namespace_memory:kube_pod_container_resource_requests:sum
   - expr: |
       kube_pod_container_resource_requests{resource="cpu",job="kube-state-metrics"}  * on (namespace, pod, cluster)
-      group_left() max by (namespace, pod) (
+      group_left() max by (namespace, pod, cluster) (
         (kube_pod_status_phase{phase=~"Pending|Running"} == 1)
       )
     record: cluster:namespace:pod_cpu:active:kube_pod_container_resource_requests
@@ -67,7 +67,7 @@
     record: namespace_cpu:kube_pod_container_resource_requests:sum
   - expr: |
       kube_pod_container_resource_limits{resource="memory",job="kube-state-metrics"}  * on (namespace, pod, cluster)
-      group_left() max by (namespace, pod) (
+      group_left() max by (namespace, pod, cluster) (
         (kube_pod_status_phase{phase=~"Pending|Running"} == 1)
       )
     record: cluster:namespace:pod_memory:active:kube_pod_container_resource_limits
@@ -84,7 +84,7 @@
     record: namespace_memory:kube_pod_container_resource_limits:sum
   - expr: |
       kube_pod_container_resource_limits{resource="cpu",job="kube-state-metrics"}  * on (namespace, pod, cluster)
-      group_left() max by (namespace, pod) (
+      group_left() max by (namespace, pod, cluster) (
        (kube_pod_status_phase{phase=~"Pending|Running"} == 1)
        )
     record: cluster:namespace:pod_cpu:active:kube_pod_container_resource_limits
