--- a/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/config/prometheus/rules/kube-prometheus/node-exporter.rules.yaml
+++ b/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/config/prometheus/rules/kube-prometheus/node-exporter.rules.yaml
@@ -6,8 +6,8 @@
       )
     record: instance:node_num_cpu:sum
   - expr: |
-      1 - avg without (cpu, mode) (
-        rate(node_cpu_seconds_total{job="node-exporter", mode="idle"}[5m])
+      1 - avg without (cpu) (
+        sum without (mode) (rate(node_cpu_seconds_total{job="node-exporter", mode=~"idle|iowait|steal"}[5m]))
       )
     record: instance:node_cpu_utilisation:rate5m
   - expr: |
@@ -19,7 +19,19 @@
     record: instance:node_load1_per_cpu:ratio
   - expr: |
       1 - (
-        node_memory_MemAvailable_bytes{job="node-exporter"}
+        (
+          node_memory_MemAvailable_bytes{job="node-exporter"}
+          or
+          (
+            node_memory_Buffers_bytes{job="node-exporter"}
+            +
+            node_memory_Cached_bytes{job="node-exporter"}
+            +
+            node_memory_MemFree_bytes{job="node-exporter"}
+            +
+            node_memory_Slab_bytes{job="node-exporter"}
+          )
+        )
       /
         node_memory_MemTotal_bytes{job="node-exporter"}
       )
