Rollback home-zwavejs2mqtt to 5.10.0

--- a/ansible/install_applications/vars/home-zwavejs2mqtt.yml
+++ b/ansible/install_applications/vars/home-zwavejs2mqtt.yml
@@ -5,7 +5,9 @@ _zwavejs2mqtt_var_loader:
   base_image:
     repo: "docker.io"
     name: "zwavejs/zwavejs2mqtt"
-    tag: "5.12.0"
+    # 5.11.0 & 5.12.0 have issues with remote stick ?
+    # Maybe issue https://github.com/zwave-js/zwavejs2mqtt/issues/1980 ?
+    tag: "5.10.0"
 
 zwavejs2mqtt:
   enabled: "{{ zwavejs2mqtt_enabled | default(True) }}"
