--- a/ansible/install_infra/roles/kubernetes_storage_classes/meta/main.yml
+++ b/ansible/install_infra/roles/kubernetes_storage_classes/meta/main.yml
@@ -2,7 +2,7 @@
 galaxy_info:
   author: "Neraud"
   license: MIT
-  description: "Configure Kubernetes infrastructure"
+  description: "Configure Kubernetes storage classes"
   min_ansible_version: 2.7
   platforms:
     - name: Debian
