Add support to annotate nodes

--- a/ansible/install_infra/roles/kubernetes_node_postinstall/defaults/main.yml
+++ b/ansible/install_infra/roles/kubernetes_node_postinstall/defaults/main.yml
@@ -3,7 +3,12 @@ kubernetes_users:
   - name: "{{ standard_user.name }}"
     home: "{{ standard_user.home }}"
     install_autocomplete: yes
+
 #kubernetes_node_labels:
+#  - name: foo
+#    value: bar
+
+#kubernetes_node_annotations:
 #  - name: foo
 #    value: bar
 
