--- a/ansible/install_applications/app-home-zigbee2mqtt.yml
+++ b/ansible/install_applications/app-home-zigbee2mqtt.yml
@@ -2,4 +2,4 @@
 - name: Provision home-zigbee2mqtt
   hosts: controller
   roles:
-  - role: home-zigbee2mqtt.deploy
+  - role: home_zigbee2mqtt_deploy
