Add nfs-papers volume

--- a/ansible/inventories/vagrant/group_vars/controller/kubernetes.yml
+++ b/ansible/inventories/vagrant/group_vars/controller/kubernetes.yml
@@ -22,3 +22,9 @@ kubernetes_nfs_storage:
     reclaim_policy: Retain
     labels:
       detail: nvr
+  nfs-papers:
+    nfs_server: "{{ hostvars[groups.controller[0]].ansible_host }}"
+    nfs_path: /opt/mock_nas/Paperless
+    reclaim_policy: Retain
+    labels:
+      detail: papers
