Add tool vhost / cert / group

--- a/ansible/inventories/vagrant/group_vars/all/apps/auth-lemonldap.yml
+++ b/ansible/inventories/vagrant/group_vars/all/apps/auth-lemonldap.yml
@@ -55,3 +55,6 @@ lemonldap_location_rules:
   # Disable Auth for Gotify
   - domain: "gotify.web.{{ web_base_domain }}"
     default_rule: skip
+
+  - domain: "*.tool.intra.{{ web_base_domain }}"
+    default_rule: groupMatch($hGroups, 'cn', 'tool')
