--- a/ansible/install_applications/roles/home_frigate_deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/home_frigate_deploy/tasks/main.yml
@@ -3,7 +3,7 @@
   ansible.builtin.import_tasks: ../../app_base_deploy/tasks/custom-namespace.yml
   vars:
     application_namespace: "{{ frigate.namespace }}"
-    create_nfs_pvc: yes
+    create_nfs_pvc: [ nfs-nvr ]
 
 - name: Deploy Frigate backup script
   ansible.builtin.import_tasks: ../../app_base_deploy/tasks/backup.yml
