--- a/ansible/install_applications/roles/stream_airsonic_deploy/tasks/main.yml
+++ b/ansible/install_applications/roles/stream_airsonic_deploy/tasks/main.yml
@@ -3,7 +3,7 @@
   ansible.builtin.import_tasks: ../../app_base_deploy/tasks/custom-namespace.yml
   vars:
     application_namespace: "{{ airsonic.namespace }}"
-    create_nfs_pvc: yes
+    create_nfs_pvc: [ nfs-multimedia ]
 
 - name: Deploy Airsonic backup script
   ansible.builtin.import_tasks: ../../app_base_deploy/tasks/backup.yml
