--- a/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-resources.alerts.yaml
+++ b/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-resources.alerts.yaml
@@ -16,7 +16,7 @@
   - alert: KubeMemoryOvercommit
     annotations:
       description: Cluster has overcommitted memory resource requests for Pods by
-        {{ $value }} bytes and cannot tolerate node failure.
+        {{ $value | humanize }} bytes and cannot tolerate node failure.
       runbook_url: https://runbooks.prometheus-operator.dev/runbooks/kubernetes/kubememoryovercommit
       summary: Cluster has overcommitted memory resource requests.
     expr: |
@@ -32,9 +32,9 @@
       runbook_url: https://runbooks.prometheus-operator.dev/runbooks/kubernetes/kubecpuquotaovercommit
       summary: Cluster has overcommitted CPU resource requests.
     expr: |
-      sum(kube_resourcequota{job="kube-state-metrics", type="hard", resource="cpu"})
+      sum(min without(resource) (kube_resourcequota{job="kube-state-metrics", type="hard", resource=~"(cpu|requests.cpu)"}))
         /
-      sum(kube_node_status_allocatable{resource="cpu"})
+      sum(kube_node_status_allocatable{resource="cpu", job="kube-state-metrics"})
         > 1.5
     for: 5m
     labels:
@@ -45,9 +45,9 @@
       runbook_url: https://runbooks.prometheus-operator.dev/runbooks/kubernetes/kubememoryquotaovercommit
       summary: Cluster has overcommitted memory resource requests.
     expr: |
-      sum(kube_resourcequota{job="kube-state-metrics", type="hard", resource="memory"})
+      sum(min without(resource) (kube_resourcequota{job="kube-state-metrics", type="hard", resource=~"(memory|requests.memory)"}))
         /
-      sum(kube_node_status_allocatable{resource="memory",job="kube-state-metrics"})
+      sum(kube_node_status_allocatable{resource="memory", job="kube-state-metrics"})
         > 1.5
     for: 5m
     labels:
