--- a/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-storage.alerts.yaml
+++ b/ansible/install_applications/roles/monitoring_prometheus_operator_deploy/app/config/prometheus/rules/kube-prometheus/kubernetes-storage.alerts.yaml
@@ -17,6 +17,8 @@
       kubelet_volume_stats_used_bytes{job="kubelet", metrics_path="/metrics"} > 0
       unless on(namespace, persistentvolumeclaim)
       kube_persistentvolumeclaim_access_mode{ access_mode="ReadOnlyMany"} == 1
+      unless on(namespace, persistentvolumeclaim)
+      kube_persistentvolumeclaim_labels{label_excluded_from_alerts="true"} == 1
     for: 1m
     labels:
       severity: critical
@@ -39,6 +41,8 @@
       predict_linear(kubelet_volume_stats_available_bytes{job="kubelet", metrics_path="/metrics"}[6h], 4 * 24 * 3600) < 0
       unless on(namespace, persistentvolumeclaim)
       kube_persistentvolumeclaim_access_mode{ access_mode="ReadOnlyMany"} == 1
+      unless on(namespace, persistentvolumeclaim)
+      kube_persistentvolumeclaim_labels{label_excluded_from_alerts="true"} == 1
     for: 1h
     labels:
       severity: warning
