--- a/ansible/install_applications/vars/download-deluge.yml
+++ b/ansible/install_applications/vars/download-deluge.yml
@@ -5,8 +5,11 @@ _deluge_var_loader:
   base_image:
     repo: "docker.io"
     name: "emmercm/libtorrent"
-    tag: "2.0.5-alpine"
-  version: 2.0.5
+    # v1.2.12+ and v2+ don't provide python2 bindings
+    tag: "1.2.11-alpine"
+  # 2.0.5 starts with emmercm/libtorrent:2.0.5-alpine (with tweaks to the Dockerfile)
+  # But it segfaults as soon as a torrent is added :/
+  version: 2.0.3
 
 deluge:
   enabled: "{{ deluge_enabled | default(True) }}"
