Upgrade stream-airsonic to airsonic-advanced edge-11.0.0-SNAPSHOT.20220204175844

--- a/ansible/install_applications/vars/stream-airsonic.yml
+++ b/ansible/install_applications/vars/stream-airsonic.yml
@@ -3,9 +3,9 @@
 _airsonic_var_loader:
   namespace: "stream-airsonic"
   base_image:
-    repo: "docker.io"
-    name: "airsonic/airsonic"
-    tag: "10.6.2-RELEASE"
+    repo: "ghcr.io"
+    name: "airsonic-advanced/airsonic-advanced"
+    tag: "edge-11.0.0-SNAPSHOT.20220204175844"
 
 airsonic:
   enabled: "{{ airsonic_enabled | default(True) }}"
